src/styles/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Oswald:400,500&display=swap');

// Variables

$purple: #D634F8;
$blue: #00F0FF;

$tablet: 767px;
$desktop: 1024px;
$xl: 1400px;

// Mixins

@mixin tablet {
  @media (min-width: #{$tablet}) {
    @content;
  }
}


@mixin desktop {
  @media (min-width: #{$desktop}) {
    @content;
  }
}

@mixin xl {
  @media (min-width: #{$xl}) {
    @content;
  }
}

html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
  display: block;
}

h1 {
  font-family: 'Oswald', sans-serif;
  font-weight: 600;
}

.title {
  font-family: 'Oswald', sans-serif;
  font-weight: 600;
  letter-spacing: 8px;
}

p {
  font-family: 'Lato', sans-serif;
  font-weight: 400;
}

// CUSTOM

.container {
  max-width: 1600px;
  margin: 0 auto;
  overflow: auto;
  padding-left: 20px;
  padding-right: 20px;

  @include tablet {
    padding-left: 40px;
    padding-right: 40px;
  }
}

.hero-outer {
  overflow: auto;
  height: 550px;
  padding: 0px 0px 50px 0px;
  background-size: 130%;
  background-position: center calc(0% - 100px); 

  @media (min-width: 640px) {
    background-size: 110%;
    background-position: center calc(0% - 100px) ; 
  }

  @include tablet {
    height: 700px;
    background-size: 800px;
    background-position: calc(10% - 100px) 50%;
  }
}

.hero-inner {
  
  @include tablet {
    padding: 0px 0px 0px calc(10% + 110px);
  }

  h1 {
    animation: slide-top 0.8s cubic-bezier(0.165, 0.840, 0.440, 1.000) both;
  }
}

.designer-developer-container {
  margin-top: -50px;
}

.designer-developer-outer {

  .dd-img {
    background-size: cover;
    position: relative;

    @include tablet {
      min-height: 350px;
    }

    &:after {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      background: $purple;
    }
  }

  .dd-text {
    margin-top: -40px;

    @include tablet {
      margin-top: 50px;
    }
  }

  &.left {
    justify-content: flex-start;

    .skill-icons {
    
      @include tablet {
        margin-left: 100px;
      }
    }

    .dd-img {
      position: relative;

      &:after {
        background: linear-gradient(180deg,  rgba(196, 196, 196, 0) 0%,#00F0FF 85.42%);
      }
    }
    
    .dd-text {
      z-index: 100;
      order: 2;
    
      .title {
        padding: 0px 0px 0px 20px;
        
        @include tablet {
          margin-left: -80px;
          padding: 0;
        }
        
      }

      .main-content {
        @include tablet {
          padding: 20px 30px 0px 100px;
        }
      }

    }

    .dd-img {
      background-color: $blue;
      order: 1;
    }
  }

  &.right {
    justify-content: flex-end;

    .skill-icons {
      @include tablet {
        margin-left: 30px;
      }
      
    }

    .dd-text {
      z-index: 100;
      order: 2;

      @include tablet {
        order: 1;
      }
    
      .title {
        text-align: right;
        padding: 0px 20px 0px 0px;

        @include tablet {
          margin-right: -80px;
          padding: 0px;
        }
      }

      .main-content {
        @include tablet {
          padding: 20px 100px 0px 30px;
        }
      }
    }

    .dd-img {
      background-color: $purple;
      order: 1;

      @include tablet {
        order: 2;
      }

      &:after {
        background: linear-gradient(180deg, rgba(196, 196, 196, 0) 0%, #D634F8 85.42%);

        @include tablet {
          background: linear-gradient(180deg, #D634F8 0%, rgba(196, 196, 196, 0) 85.42%);
        }
      }
    }
  }

  .skill-icons {
    max-width: 120px;
    padding-top: 20px;

    img {
      max-width: 44px;
    }
  }
}

@-webkit-keyframes slide-top {
  0% {
    -webkit-transform: translateY(50px);
            transform: translateY(50px);
  }
  100% {
    -webkit-transform: translateY(0px);
            transform: translateY(-0px);
  }
}
@keyframes slide-top {
  0% {
    -webkit-transform: translateY(50px);
            transform: translateY(50px);
  }
  100% {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
  }
}

